--- a/Edit In/Base.lproj/Main.storyboard
+++ b/Edit In/Base.lproj/Main.storyboard
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaDFRPlugin" version="14019"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14113"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14313.18"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
-        <capability name="the Touch Bar" minToolsVersion="8.1" minSystemVersion="10.12.2" requiredIntegratedClassName="NSTouchBar"/>
     </dependencies>
     <scenes>
         <!--Application-->
@@ -119,11 +118,12 @@
         <scene sceneID="R2V-B0-nI4">
             <objects>
                 <windowController showSeguePresentationStyle="single" id="B8D-0N-5wS" sceneMemberID="viewController">
-                    <window key="window" title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" titlebarAppearsTransparent="YES" id="IQv-IB-iLA">
+                    <window key="window" title="Edit In" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" titlebarAppearsTransparent="YES" id="IQv-IB-iLA">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES"/>
-                        <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-                        <rect key="contentRect" x="196" y="240" width="480" height="270"/>
+                        <rect key="contentRect" x="479" y="287" width="600" height="400"/>
                         <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
+                        <value key="minSize" type="size" width="600" height="400"/>
+                        <value key="maxSize" type="size" width="600" height="400"/>
                         <connections>
                             <outlet property="delegate" destination="B8D-0N-5wS" id="98r-iN-zZc"/>
                         </connections>
@@ -141,26 +141,120 @@
             <objects>
                 <viewController id="XfG-lQ-9wD" customClass="ViewController" customModule="Edit_In" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" wantsLayer="YES" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="250"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="b6y-DP-p3J">
-                                <rect key="frame" x="188" y="61" width="81" height="32"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <buttonCell key="cell" type="push" title="Button" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="mmq-dr-3Cj">
-                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="SPH-Uf-UJg">
+                                <rect key="frame" x="75" y="193" width="98" height="17"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="Cache location:" id="QAi-m6-AUk">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <stackView distribution="fill" orientation="vertical" alignment="leading" spacing="22" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VeH-qz-VLo">
+                                <rect key="frame" x="375" y="129" width="66" height="16"/>
+                            </stackView>
+                            <customView translatesAutoresizingMaskIntoConstraints="NO" id="QIZ-aA-WUs">
+                                <rect key="frame" x="187" y="109" width="393" height="101"/>
+                                <subviews>
+                                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="XgD-fJ-nwv">
+                                        <rect key="frame" x="-1" y="62" width="69" height="18"/>
+                                        <buttonCell key="cell" type="radio" title="Custom" bezelStyle="regularSquare" imagePosition="left" alignment="left" inset="2" id="sB3-zf-HMr">
+                                            <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                                            <font key="font" metaFont="system"/>
+                                        </buttonCell>
+                                        <connections>
+                                            <action selector="setCacheLocationType:" target="XfG-lQ-9wD" id="hFj-zP-3u4"/>
+                                        </connections>
+                                    </button>
+                                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="6qM-Qf-rcO">
+                                        <rect key="frame" x="-1" y="84" width="66" height="18"/>
+                                        <buttonCell key="cell" type="radio" title="Default" bezelStyle="regularSquare" imagePosition="left" alignment="left" state="on" inset="2" id="Noc-n0-0bz">
+                                            <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                                            <font key="font" metaFont="system"/>
+                                            <connections>
+                                                <action selector="setCacheLocationType:" target="XfG-lQ-9wD" id="gmO-h9-vZG"/>
+                                            </connections>
+                                        </buttonCell>
+                                    </button>
+                                    <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="1hK-B7-dcK">
+                                        <rect key="frame" x="20" y="33" width="373" height="22"/>
+                                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" id="Wqs-fk-FTe">
+                                            <font key="font" metaFont="system"/>
+                                            <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                        </textFieldCell>
+                                    </textField>
+                                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="j2n-OK-LoC">
+                                        <rect key="frame" x="14" y="-3" width="85" height="32"/>
+                                        <buttonCell key="cell" type="push" title="Browse" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="0bw-Jk-35h">
+                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                            <font key="font" metaFont="system"/>
+                                        </buttonCell>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="1hK-B7-dcK" firstAttribute="leading" secondItem="j2n-OK-LoC" secondAttribute="leading" id="6dA-WQ-gNf"/>
+                                    <constraint firstItem="6qM-Qf-rcO" firstAttribute="top" secondItem="QIZ-aA-WUs" secondAttribute="top" id="8uN-RX-Gd7"/>
+                                    <constraint firstItem="XgD-fJ-nwv" firstAttribute="top" secondItem="6qM-Qf-rcO" secondAttribute="bottom" constant="6" symbolic="YES" id="QeU-FO-ErD"/>
+                                    <constraint firstItem="6qM-Qf-rcO" firstAttribute="leading" secondItem="XgD-fJ-nwv" secondAttribute="leading" id="Tbl-rr-kll"/>
+                                    <constraint firstItem="1hK-B7-dcK" firstAttribute="top" secondItem="XgD-fJ-nwv" secondAttribute="bottom" constant="8" symbolic="YES" id="ZwR-Zy-U29"/>
+                                    <constraint firstAttribute="trailing" secondItem="1hK-B7-dcK" secondAttribute="trailing" id="a1V-7p-5bE"/>
+                                    <constraint firstItem="1hK-B7-dcK" firstAttribute="leading" secondItem="QIZ-aA-WUs" secondAttribute="leading" constant="20" symbolic="YES" id="aAg-v9-41j"/>
+                                    <constraint firstItem="j2n-OK-LoC" firstAttribute="top" secondItem="1hK-B7-dcK" secondAttribute="bottom" constant="8" symbolic="YES" id="mwq-Me-acd"/>
+                                    <constraint firstItem="6qM-Qf-rcO" firstAttribute="leading" secondItem="QIZ-aA-WUs" secondAttribute="leading" id="woS-md-Pbp"/>
+                                </constraints>
+                            </customView>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="2UR-8o-Eln">
+                                <rect key="frame" x="38" y="77" width="135" height="17"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="Preferred application:" id="ADa-5e-va3">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="NO3-Z9-NWc">
+                                <rect key="frame" x="185" y="70" width="398" height="25"/>
+                                <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" id="5Nw-nj-9gE">
+                                    <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="menu"/>
+                                    <menu key="menu" id="xBj-gJ-bgZ"/>
+                                </popUpButtonCell>
+                            </popUpButton>
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="TEv-ig-4h8">
+                                <rect key="frame" x="185" y="49" width="373" height="18"/>
+                                <buttonCell key="cell" type="check" title="Open photo automatically when the extension is loaded" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="Urz-bu-inw">
+                                    <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
                             </button>
                         </subviews>
+                        <constraints>
+                            <constraint firstItem="QIZ-aA-WUs" firstAttribute="leading" secondItem="NO3-Z9-NWc" secondAttribute="leading" id="0sa-bs-UUJ"/>
+                            <constraint firstItem="SPH-Uf-UJg" firstAttribute="trailing" secondItem="2UR-8o-Eln" secondAttribute="trailing" id="268-k7-7ZX"/>
+                            <constraint firstItem="VeH-qz-VLo" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="105" id="7TR-hO-cx8"/>
+                            <constraint firstItem="QIZ-aA-WUs" firstAttribute="leading" secondItem="SPH-Uf-UJg" secondAttribute="trailing" constant="16" id="Bui-Bf-jmx"/>
+                            <constraint firstItem="SPH-Uf-UJg" firstAttribute="top" secondItem="QIZ-aA-WUs" secondAttribute="top" id="Dit-ae-GgG"/>
+                            <constraint firstItem="NO3-Z9-NWc" firstAttribute="leading" secondItem="TEv-ig-4h8" secondAttribute="leading" id="Fnf-PN-WrQ"/>
+                            <constraint firstItem="TEv-ig-4h8" firstAttribute="top" secondItem="NO3-Z9-NWc" secondAttribute="bottom" constant="8" id="Gtm-qL-v3z"/>
+                            <constraint firstAttribute="trailing" secondItem="QIZ-aA-WUs" secondAttribute="trailing" constant="20" symbolic="YES" id="VO9-nZ-4Gt"/>
+                            <constraint firstItem="SPH-Uf-UJg" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="40" id="Yzx-wl-if0"/>
+                            <constraint firstItem="VeH-qz-VLo" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="375" id="bQu-XM-ohf"/>
+                            <constraint firstItem="QIZ-aA-WUs" firstAttribute="trailing" secondItem="NO3-Z9-NWc" secondAttribute="trailing" id="bxc-t6-2Tk"/>
+                            <constraint firstAttribute="trailing" secondItem="TEv-ig-4h8" secondAttribute="trailing" constant="44" id="dY6-Qo-V6h"/>
+                            <constraint firstItem="NO3-Z9-NWc" firstAttribute="top" secondItem="QIZ-aA-WUs" secondAttribute="bottom" constant="15" id="fhD-RK-2tw"/>
+                            <constraint firstItem="NO3-Z9-NWc" firstAttribute="top" secondItem="VeH-qz-VLo" secondAttribute="bottom" constant="35" id="haU-2e-eSJ"/>
+                            <constraint firstItem="2UR-8o-Eln" firstAttribute="top" secondItem="NO3-Z9-NWc" secondAttribute="top" id="lgn-iT-yki"/>
+                            <constraint firstAttribute="trailing" secondItem="VeH-qz-VLo" secondAttribute="trailing" constant="159" id="qaX-Pf-hCu"/>
+                            <constraint firstItem="2UR-8o-Eln" firstAttribute="top" secondItem="SPH-Uf-UJg" secondAttribute="bottom" constant="99" id="wbY-uW-oaF"/>
+                            <constraint firstItem="2UR-8o-Eln" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="40" id="ze1-Vq-plx"/>
+                        </constraints>
                     </view>
-                    <touchBar key="touchBar" id="0A8-4w-LEa">
-                        <nil name="touchBarItems"/>
-                    </touchBar>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="75" y="655"/>
+            <point key="canvasLocation" x="74" y="852"/>
         </scene>
     </scenes>
 </document>
