Add UserDefaultsHelper and util methods

--- a/Edit In.../Base.lproj/PhotoEditingViewController.xib
+++ b/Edit In.../Base.lproj/PhotoEditingViewController.xib
@@ -36,22 +36,25 @@
                             </view>
                         </subviews>
                     </clipView>
-                    <scroller key="horizontalScroller" verticalHuggingPriority="750" horizontal="YES" id="jQd-WR-xh5">
+                    <scroller key="horizontalScroller" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="jQd-WR-xh5">
                         <rect key="frame" x="1" y="183" width="523" height="16"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
-                    <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="32d-OI-iD6">
+                    <scroller key="verticalScroller" wantsLayer="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="32d-OI-iD6">
                         <rect key="frame" x="508" y="1" width="16" height="198"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
                 </scrollView>
                 <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="04M-bY-OFO">
-                    <rect key="frame" x="14" y="25" width="117" height="32"/>
+                    <rect key="frame" x="16" y="25" width="114" height="32"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <buttonCell key="cell" type="push" title="Open in ACR" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="mnm-v1-WLN">
+                    <buttonCell key="cell" type="push" title="Open Image" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="mnm-v1-WLN">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="system"/>
                     </buttonCell>
+                    <connections>
+                        <action selector="handleOpenImage:" target="-2" id="OfY-Gu-jI8"/>
+                    </connections>
                 </button>
                 <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Sqz-5I-xjI">
                     <rect key="frame" x="14" y="340" width="96" height="32"/>
